# SoftwareStandards

./: .gitignore  Cargo.toml
webapp/: Cargo.toml  index.html  web.config
webapp/css/: app.css  app.min.css
webapp/d/: about.md  continuous-agile-software-engineering.md  root.md
webapp/d/blogs/: code-reviews.md
webapp/d/en-US/: about.md  case.md  contact.md  continuous-agile-software-engineering.md  privacy.md  root.md  terms.md
webapp/d/en-US/blogs/: code-reviews.md
webapp/d/en-US/info/: agile.md  holistic.md  interview.md  interviews.md  simple.md  standards.md  statement-of-work.md  statement_of_work.md  tests.md
webapp/d/en-US/tenets/: code-ownership.md  continuous-agility.md  continuous-automation.md  continuous-collaboration.md  continuous-delivery.md  continuous-feedback-loops.md  (+6 more)
webapp/d/info/: agile.md  holistic.md  interviews.md  simple.md  standards.md  tests.md
webapp/d/tenets/: continuous-automation.md  continuous-collaboration.md  continuous-iterations.md  continuous-testing.md
webapp/root_files/: app.webmanifest  appConfig.json  nav.json  robots.txt  service-worker.js  service-worker.min.js  sitemap.xml  web.config
webapp/root_files/cards/: agile.json  case-tenets.json  sow.json  standards-dev.json  standards-ownership.json  standards-team.json  standards.json
webapp/src/: components.rs  main.rs  nav_menu.rs  pages.rs  prelude.rs
webapp/src/components/: books.rs
webapp/src/pages/: agile.rs  holistic.rs  home.rs  interviews.rs  simple.rs  standards.rs  statement_of_work.rs  tenets.rs  tests.rs
webapp/wc/: books.js  books.min.js
(+23 files in other folders)
