[package]
name = "webapp"
version = "0.6.61" #syncwebui
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webui = { git = "https://github.com/StoicDreams/RustWebUI", branch = "main", features = [
    "all",
    "stoic",
] }
yew = "0.20"

[profile.dev]
opt-level = "s"
lto = true
incremental = true

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.dev.build-override]
opt-level = "s"
codegen-units = 16

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
